k8s/mobileburd/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: mobileburd-web
  labels:
    name: mobileburd-web
