k8s/mobileburd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mobileburd-web
  namespace: mobileburd-web
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
    - protocol: TCP
      name: https
      port: 443
      targetPort: 443
  selector:
    app: mobileburd-web
